# murf-voice-agent-starter

./: .env.example  .gitignore  README.md  architecture-diagram.md  main.py  pyproject.toml
app/: main.py
app/assets/: pcm-processor.js  recorder.js
app/routers/: __init__.py
app/routers/ui/: __init__.py  ui.py
app/routers/ws_chat/: __init__.py  ws_chat.py
app/schemas/: query.py  tts.py  upload_file.py
app/services/assembly_transcribe/: assembly_transcribe.py
app/services/chat/: chat_manager.py
app/services/gemini_llm/: gemini_llm.py
